# ha-jaalee-ble

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  hacs.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  lint.yml  release.yml  validate.yml
custom_components/jaalee/: __init__.py  config_flow.py  const.py  device.py  manifest.json  sensor.py  strings.json
custom_components/jaalee/translations/: en.json
custom_components/jaalee_ble/: config_flow.py  const.py  manifest.json  sensor.py
scripts/: develop  setup
tests/: __init__.py  conftest.py  test_ble_integration.py  test_config_flow.py  test_const.py  test_device.py  test_integration.py  test_sensor.py
