[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ha-jaalee-ble"
version = "0.1.0"
description = "Home Assistant integration for Jaalee BLE devices"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Daniel M", email = "daniel@mohni.info" },
]
requires-python = ">=3.14.2"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "jaalee-ble",
]

[dependency-groups]
dev = [
    "aiousbwatcher",
    "bluetooth-adapters>=2.1.0",
    "colorlog>=6.10.1",
    "habluetooth>=5.7.0",
    "homeassistant==2026.3.0",
    "pycares>=5.0.0,<6",
    "pytest>=8.2.0",
    "pytest-asyncio>=1.3.0",
    "pyserial",
    "ruff>=0.15.0",
    "mypy>=1.8.0",
    "pre-commit>=4.5.1",
]

[tool.hatch.build.targets.wheel]
packages = ["custom_components/jaalee"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
minversion = "8.2"

[tool.mypy]
python_version = "3.14"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
ignore_missing_imports = true
